--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 /*////////////// Fonts //////////////*/
 
 /* link the web font used for the level 1 heading here */
+@font-face {
+	font-family: 'Baskerville';
+	src: url(../fonts/Baskerville.ttc);
+}
+
 
 /*////////// Global Styles //////////*/
 
@@ -15,6 +20,76 @@ body {
 	margin: 0 auto;
 	background: #fff;
 	padding: 0 45px 20px;
+}
+
+h1{
+	padding-bottom: 10px;
+	margin: 0 0 5px;
+	font-size: 5em;
+	font-weight: normal;
+	font-family: 'Baskerville', serif;
+	border-bottom: 1px solid #ccc;
+}
+
+h2{
+	color: rgb(111,127,122);
+	font-size: 2em;
+	font-family: 'Baskerville', serif;
+
+}
+
+p {
+	color: #555;
+	font-size: 1em;
+	margin: 0 0 20px 0;
+}
+
+.small{
+	font-size: .8em;
+}
+
+
+/*////////// Section Styles //////////*/
+
+header a{
+	text-decoration: none;
+	color: rgb(147,174,166)
+
+}
+
+header a:hover{
+	color: rgb(111,127,122);
+}
+
+#featured img{
+	border: 5px rgb(152,173,166) solid;
+}
+
+#featured a{
+	text-decoration: none;
+	color: #1783bb;
+}
+
+#featured a:hover{
+	text-decoration: underline;
+}	
+
+
+#press {
+	margin-bottom: 20px;
+}
+
+#press img {
+	border: 5px #ccc solid;
+	padding: 1px;
+}
+
+#press img:hover {
+	border: 5px rgb(111,127,122) solid;
+}
+
+footer {
+	text-align: right;
 }
 
 /* Write all remaining styles here */
