--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
 /*////////////// Fonts //////////////*/
-
-/* link the web font used for the level 1 heading here */
+@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville');
 
 /*////////// Global Styles //////////*/
 
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
+	margin: 0;
+	display: block;
 }
 
 .wrapper {
@@ -15,6 +16,82 @@ body {
 	margin: 0 auto;
 	background: #fff;
 	padding: 0 45px 20px;
+	display: block;
 }
 
-/* Write all remaining styles here */
+h1 {
+	padding-bottom: 10px;
+	margin: 0 0 5px;
+	font-size: 5em;
+	font-weight: normal;
+	font-family: Baskerville, serif;
+	border-bottom: 1px solid #ccc;
+}
+
+header a {
+	font-weight:bold;
+	color: rgb(152, 173, 166);
+	font-size: 2.5em;
+}
+
+header a:hover, header a:active {
+	color: rgb(111,127,122);
+	outline: 0;
+	text-decoration: none;
+}
+
+header a:link {
+	text-decoration: none;
+}
+
+
+h2 {
+	color: rgb(111,127,122);
+	font-size: 2em;
+	margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
+
+p {
+	color: #555;
+	font-size: 1em;
+	margin: 0 0 20px 0;
+}
+
+#press {
+	margin-bottom: 20px;
+}
+
+#featured img {
+	border: 5px rgb(152, 173, 166) solid;
+	width = 50%;
+}
+
+
+#featured a:link, #featured a:visited {
+	color: rgb(7, 132, 192);
+	text-decoration: none;
+}
+
+#featured a:hover {
+	color: rgb(7, 132, 192);
+	text-decoration: underline;
+}
+
+#press a:link img, #press a:visited img{
+	border: 5px #ccc solid;
+}
+
+#press a:hover img{
+	border: 5px rgb(107, 128, 123) solid;
+}
+
+footer p {
+	text-align: right;
+	font-size: 0.8;
+	color: #555;
+	font-family: "Times New Roman", serif;
+}
